--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "lodash": "^4.3.0",
     "morgan": "^1.6.1",
-    "body-parser": "^1.13.3"
+    "recursive-readdir": "^1.3.0",
+    "swagger-ui": "^2.1.4"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.2",
-    "gulp-plumber": "^1.0.0",
     "mocha": "^2.4.5",
     "should": "^8.2.2",
     "supertest": "^1.2.0"
