--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "express-api-seed",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "./node_modules/.bin/mocha $(find ./ -name '*.spec.js') --recursive"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "express": "^4.13.3",
-    "lodash": "^4.3.0",
-    "morgan": "^1.6.1",
-    "recursive-readdir": "^1.3.0",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "lodash": "^4.8.2",
+    "morgan": "^1.7.0",
+    "mysql": "^2.10.2",
+    "sequelize": "^3.21.0",
+    "sequelize-cli": "^2.3.1",
     "swagger-ui": "^2.1.4"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-nodemon": "^2.0.2",
     "mocha": "^2.4.5",
-    "should": "^8.2.2",
+    "should": "^8.3.0",
     "supertest": "^1.2.0"
   }
 }
