--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./bin/www",
     "test": "./node_modules/.bin/mocha $(find ./ -name '*.spec.js') --recursive"
   },
-  "author": "",
+  "author": "Jeonghwan",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
@@ -16,6 +16,7 @@
     "morgan": "^1.7.0",
     "mysql": "^2.10.2",
     "sequelize": "^3.21.0",
+    "swagger-parser": "^3.4.1",
     "swagger-ui": "^2.1.4"
   },
   "devDependencies": {
