--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/.bin/mocha $(find ./ -name '*.spec.js') --recursive"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha $(find ./ -name '*.spec.js') --recursive"
   },
   "author": "Jeonghwan",
   "license": "ISC",
